src/app.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');


* {
margin: 0;
padding: 0;
box-sizing: border-box;
}

html {
    scroll-behavior: smooth;
}

:not(i) {
    font-family: 'Montserrat', sans-serif;
}

body {
color: #fff;
background-color: #121212;
line-height: 1.6;
}

/* Container */
.container {
max-width: 1200px;
margin: 0 auto;
padding: 0 2rem;
}

/* Hero Section */
#hero {
height: 100vh;
display: flex;
flex-direction: column;
justify-content: center;
align-items: center;
background: linear-gradient(
    to bottom,
    hsl(160, 100%, 50%),
    hsl(202, 100%, 50%),
    hsl(240, 100%, 50%)
  ), url('./misc/download.jpg');
background-size: cover;
background-position: center;
text-align: center;
background-blend-mode: overlay;
animation: hue 5s linear infinite alternate;
}



@keyframes hue {
    from {
      filter: hue-rotate(-40deg) saturate(0.5);
    }
    to {
      filter: hue-rotate(30deg) saturate(0.8);
    }
  }

.hero h1 {
font-size: 3rem;
margin-bottom: 1rem;
}

.hero h2 {
font-size: 1.5rem;
margin-bottom: 2rem;
}

.hero button {
    background-color: #ffffff;
    border: none;
    border-radius: 5px;
    padding: 0.75rem 1.5rem;
    font-size: 1rem;
    font-weight: bold;
    cursor: pointer;
    transition: background-color 0.3s;
  }

  .hero button:hover {
    background-color: #cccccc;
  }

/* Navigation Bar */
.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 60px;
    background-color: rgba(0, 0, 0, 0.5);
    z-index: 100;
  }

  .navbar div {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .navbar a {
    display: block;
    padding: 1rem;
    font-size: 1.2rem;
    color: #fff;
    text-decoration: none;
    transition: all 0.2s ease-in-out;
  }
.navbar a {
    justify-content: left;
}

.navbar a:hover {
    color: #08f7fe;
  }

.navbar i {
    margin-right: 10px;
  }

/* Skills Section */
#skills {
    padding: 4rem 0;
  }

  .skills-container {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
  }

  .skill {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 200px;
    width: calc(20% - 2rem);
    margin: 1rem;
    border-radius: 5px;
    padding: 1rem;
    transition: all 0.2s ease-in-out;
    background-color: #2e2e2e;
    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
  }

  .skill:hover {
    transform: translateY(-5px);
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
  }

  .skill img {
    height: 6rem;
    margin-bottom: 0.5rem;
  }

  .skill h3 {
    font-size: 1.5rem;
    text-align: center;
    color: #f3f3f3;
    margin-top: 0;
  }

  .proficiency {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 1rem;
    font-size: 1.5rem;
    color: #f3f3f3;
  }

  .proficiency i {
    margin-right: 0.6rem;
    margin-bottom: 0.5rem;
}



/* Education Section */
#education {
padding: 4rem 0;
}

.timeline {
position: relative;
margin-bottom: 0rem;
}

.timeline p {
    font-size: 0.65rem;
    margin: 1%;
    }

.timeline:before {
content: '';
position: absolute;
left: 50%;
top: 0;
bottom: 0;
width: 2px;
background-color: #888;
}

.timeline-entry {
position: relative;
width: 50%;
padding: 1rem;
box-sizing: border-box;
clear: both;
border-bottom: 1px solid #ccc;
}

.timeline-entry:nth-child(odd) {
margin-left: 0;
padding-right: 3rem;
}

.timeline-entry:nth-child(even) {
margin-left: 50%;
padding-left: 3rem;
text-align: right;
}

.timeline-entry:before {
content: '';
position: absolute;
width: 12px;
height: 12px;
border-radius: 50%;

}

.timeline-entry:nth-child(odd):before {
left: calc(50% - 6px);
}

.timeline-entry:nth-child(even):before {
right: calc(50% - 6px);
}

.timeline-entry h3 {
font-size: 1.2rem;
margin-bottom: 0.5rem;
}

.timeline-entry p {
font-size: 0.9rem;
}

/* Contact Section */
#contact {
padding: 4rem 0;
background-color: #222;
color: #fff;
padding-bottom: 12  rem;
font-size: 1.2rem;
}

.contact-container {
display:flex;
flex-wrap: wrap;
justify-content: space-between;
align-items: center;
margin: 2rem 0;

}

.contact-info {
width: 45%;
font-size: 1.2rem;
margin-right: 5%;
}

.contact-info h3 {
margin-bottom: 1rem;
}

.contact-info p {
margin-bottom: 0.5rem;
display: flex;
align-items: center;
}

.contact-info a {
    margin-bottom: 0.5rem;
    display: flex;
    align-items: center;
    color: rgb(139, 201, 216);
}

.contact-info p i {
margin-right: 0.5rem;
}

.contact-form {
font-size: 1.2rem;
width: 45%;
}
.contact-form h3 {
    margin-bottom: 2rem;
}
.form-group {
margin-bottom: 2rem;
}

label {
display: block;
font-weight: bold;
margin-bottom: 0.5rem;
}
input[type="text"],
input[type="email"],
textarea {
  display: block;
  width: 100%;
  padding: 0.75rem 1rem;
  font-size: 1.1rem;
  border: none;
  border-radius: 5px;
  background-color: rgba(255, 255, 255, 0.1);
  color: #fff;
  margin-top: 0.5rem;
}

input[type="text"]:focus,
input[type="email"]:focus,
textarea:focus {
  background-color: rgba(255, 255, 255, 0.2);
  outline: none;
}

button.btn {
background-color: #fff;
color: #333;
border: none;
border-radius: 5px;
padding: 0.75rem 1rem;
font-size: 1.1rem;
cursor: pointer;
margin-top: 1rem;
transition: all 0.2s ease-in-out;
}

button.btn:hover {
background-color: #eee;
color: #333;
transform: translateY(-3px);
box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
}

/* Media Queries */
@media (max-width: 768px) {
.timeline::before {
    display: none;
    }
.timeline-entry {
width: 100%;
padding-left: 3rem;
padding-right: 3rem;
}

.timeline-entry:nth-child(odd), .timeline-entry:nth-child(even) {
margin-left: 0;
}

.timeline-entry:nth-child(even):before {
left: calc(50% - 6px);
}
}

@media screen and (max-width: 767px) {
    .skills-container {
      flex-wrap: wrap;
      justify-content: center;
      gap: 20px
    }
    .skill {
      width: 100%;
      max-width: 230px;
      margin: 1rem 0;
    }
  }
  
  @media screen and (min-width: 768px) and (max-width: 1023px) {
    .skills-container {
      flex-wrap: wrap;
      justify-content: center;
    }
    .skill {
      width: calc(25% - 2rem);
      margin: 1rem;
    }
  }

  @media screen and (max-width: 767px) {
    .contact-form {
      width: 100%;
      margin-top: 2rem;
    }
    .contact-info {
        width: 100%;
        margin-top: 2rem;
      }
  
    .contact-form input,
    .contact-form textarea {
      width: 100%;
      margin-bottom: 2rem;
    }
  }
  

